# CoordFill

./: .gitignore  README.md  check_weights.sh  pyproject.toml
src/coordfill/: __init__.py  coordfill.py
src/coordfill/models/: __init__.py  coordfill.py  ffc.py  gan.py  modules.py  networks.py  tools.py
src/coordfill/models/LPIPS/models/: base_model.py  dist_model.py  networks_basic.py  pretrained_networks.py
